--- a/src/app/spotbie/spotbie-logged-out/forgot-password/forgot-password.component.css
+++ b/src/app/spotbie/spotbie-logged-out/forgot-password/forgot-password.component.css
@@ -22,16 +22,36 @@ h2{
     margin-bottom: 40px !important;
     margin-top: 40px !important;
 }
+.spotbie-overlay-window{
+    background: url(/assets/images/background.png);
+    background-position: center;
+    background-color: rgb(21 21 21);
+    text-align: left;
+    width: 102%;
+    min-width: 102%;
+    max-width: 102%;    
+    z-index: 9999998;
+}
+.spotbie-close-button{
+    z-index: 9999999;
+}
 .spotbie-paragraph{
     text-indent: unset;
 }
+
 .spotbie-overlay-window{
     background-color: rgb(12, 12, 12);
+    z-index: 9999998;
 }
+.spotbie-close-button{
+    z-index: 9999999;
+}
+
 .spotbie-contact-me-info{
     font-size: 17px;
     margin-bottom: 20px;
     letter-spacing: 2px;
+    text-align: center;
 }
 .spotbie-paragraph{
     background-color: rgb(12, 12, 12);
