--- a/src/app/spotbie/spotbie-logged-out/menu-logged-out.component.html
+++ b/src/app/spotbie/spotbie-logged-out/menu-logged-out.component.html
@@ -4,7 +4,7 @@
   <tr>
     
     <td (click)="home()">
-      <img class='spotbie-mini-logo' src="../../assets/favicon/android-icon-72x72.png" />
+      <img class='spotbie-mini-logo' src="assets/favicon/android-icon-72x72.png" />
     </td>     
 
     <td (click)="openWindow(logInWindow)">
