--- a/src/app/terms/terms.component.css
+++ b/src/app/terms/terms.component.css
@@ -11,3 +11,47 @@ h1,a{
     min-width: 96%;
     max-width: 96%;
 }
+/**WIDTH MEDIA QUERIES */
+@media (max-width: 1300px) { 
+
+}
+@media (max-width: 1200px) {   
+   
+}
+@media (max-width: 1024px) { 
+
+}
+@media (max-width: 900px) { 
+
+}
+@media (max-width: 768px) { 
+
+}
+@media (max-width: 700px) { 
+
+}
+@media (max-width: 600px) { 
+
+}
+@media (max-width: 560px) { 
+     
+}
+@media (max-width: 460px) { 
+
+}
+@media (max-width: 420px) { 
+               
+}
+@media (max-width: 360px) { 
+    
+}
+
+@media (max-width: 320px) {
+
+}
+@media (max-width: 220px) { 
+
+}
+@media (max-width: 120px) { 
+
+}
