--- a/src/app/spotbie/map/info-object/info-object.component.css
+++ b/src/app/spotbie/map/info-object/info-object.component.css
@@ -1,5 +1,9 @@
 .spotbie-overlay-window{
     padding-bottom: 100px;
+    z-index: 9999998;
+}
+.spotbie-close-button{
+    z-index: 9999999;
 }
 .spotbie-info-object-transactions{
     position: relative;
@@ -114,8 +118,15 @@
     margin-top: 20px;
     margin-bottom: 20px;
 }
-.spotbie-google-maps-it{
+.spotbie-info-object-buttons{
     cursor: pointer;
+}
+.spotbie-info-object-buttons i{
+    margin-left: 30px;
+    margin-right: 30px;
+    font-size: 30px;
+    margin-top: 40px;
+    margin-bottom: 20px;
 }
 .spotbie-button{
     background-color: rgba(0,0,0,.5);
@@ -126,6 +137,17 @@
 }
 .fa-star{
     color: gold;
+}
+.spotbie-is-open{
+    color: green;
+}
+.spotbie-is-closed{
+    color: red;
+}
+.spotbie-info-object-open {
+    margin-top: 30px;
+    font-size: 16px;
+    font-weight: bold;
 }
 @media (max-width: 1583px) { 
 
