--- a/src/app/spotbie/map/map.component.html
+++ b/src/app/spotbie/map/map.component.html
@@ -63,7 +63,7 @@
         <div class='spotbie-marker-bg'
               (click)="pullSearchMarker(mapObject)"
               [ngStyle]="{'background' : 'url(' + mapObject.icon + ')',
-                          'border' : '4px solid ' + bg_color}">
+                          'border' : '2px solid #5c7b36' }">
         </div>
 
       </agm-overlay>                    
@@ -141,7 +141,7 @@
     
     {{ category.name }}
 
-    <div class='spotbie-sub-cat-wrapper' *ngIf="category.show_sub && category.type !== undefined">
+    <!--<div class='spotbie-sub-cat-wrapper' *ngIf="category.show_sub && category.type !== undefined">
 
       <div class='spotbie-sub-cat' *ngFor="let sub_cat_type of category.type._embedded.subtypes" (click)="apiSearch(sub_cat_type.name)" [SpotBieStopClickPropagation]>
         
@@ -149,15 +149,15 @@
 
       </div>
 
-    </div>
+    </div>-->
 
     <div class='spotbie-sub-cat-wrapper' *ngIf="category.show_sub && category.segment !== undefined">
 
-      <div class='spotbie-sub-cat' *ngFor="let sub_cat_type of category.segment._embedded.genres" (click)="showEventSubCategory(sub_cat_type)" [SpotBieStopClickPropagation]>
+      <div class='spotbie-sub-cat' *ngFor="let sub_cat_type of category.segment._embedded.genres" (click)="apiSearch(sub_cat_type.name)" [SpotBieStopClickPropagation]>
         
         {{ sub_cat_type.name }}
 
-        <div *ngIf="sub_cat_type.show_sub_sub">
+        <!--<div *ngIf="sub_cat_type.show_sub_sub">
 
           <div class='spotbie-subgenre' *ngFor="let subgenre of sub_cat_type._embedded.subgenres" (click)="apiSearch(subgenre.name)" [SpotBieStopClickPropagation]>
 
@@ -165,7 +165,7 @@
   
           </div>
 
-        </div> 
+        </div> -->
 
       </div>
 
@@ -190,6 +190,12 @@
 
   <div class='spotbie-search-results-title' *ngIf="type_of_info_object == 'yelp_business'">
     Max Distance  <mat-slider min="0" max="25" step="1" value="{{ maxDistance }}"
+                            (change)="updateDistance($event)"></mat-slider>
+    {{ maxDistance }} miles.                            
+  </div>
+
+  <div class='spotbie-search-results-title' *ngIf="type_of_info_object == 'ticketmaster_events'">
+    Max Distance  <mat-slider min="0" max="50" step="1" value="{{ maxDistance }}"
                             (change)="updateDistance($event)"></mat-slider>
     {{ maxDistance }} miles.                            
   </div>
@@ -254,8 +260,11 @@
     <div class='spotbie-search-result' *ngFor='let search_result of searchResults' (click)="pullSearchMarker(search_result)">
       
       <div class='spotbie-search-result-title' >
+        
         {{ search_result.name }} 
+        
         <span class='spotbie-search-result-price' *ngIf="search_result.price_on == '1'">({{ search_result.price }})</span>
+
       </div>
       
       <table class='spotbie-search-result-table'>
@@ -273,7 +282,7 @@
                   <div class='spotbie-search-result-rating-img' [ngStyle]="{ 'background' : 'url(' + search_result.rating_image + ')' }"></div>
                 </td>
                 <td>
-                  <div class='spotbie-search-result-yelp-logo' [ngStyle]="{ 'background' : 'url(../assets/images/yelp/yelp_logo.png)' }"></div>
+                  <div class='spotbie-search-result-yelp-logo' [ngStyle]="{ 'background' : 'url(assets/images/yelp/yelp_logo.png)' }"></div>
                 </td>
               </tr>
             </table>
@@ -382,21 +391,7 @@
 
 </div>
 
-
-<div class="spotbie-overlay-window" *ngIf="locationPrompt">
-
-  <div class="spotie-prompt">
-
-    <p>
-      SpotBie uses your location to find nearby users, retail shops, places to eat, and events.
-      Other users can't see you unless you make an account and disable Ghost Mode.
-    </p>
-
-    <div class="spotbie-button spotbie-button-prompt"(click)="acceptLocationPrompt()">I Understand</div>
-
-  </div>
-  
-</div>
+<app-welcome *ngIf="locationPrompt" (locationPrompted)="acceptLocationPrompt()"></app-welcome>
 
 <app-my-favorites *ngIf='myFavoritesWindow.open' (closeWindow)="myFavoritesWindow.open = false"></app-my-favorites>
 
