--- a/src/app/spotbie/my-favorites/my-favorites.component.html
+++ b/src/app/spotbie/my-favorites/my-favorites.component.html
@@ -30,7 +30,7 @@
                   </td>
 
                   <td>
-                    <div class='spotbie-search-result-yelp-logo' [ngStyle]="{ 'background' : 'url(../assets/images/yelp/yelp_logo.png)' }"></div>
+                    <div class='spotbie-search-result-yelp-logo' [ngStyle]="{ 'background' : 'url(assets/images/yelp/yelp_logo.png)' }"></div>
                   </td>
 
                 </tr>
@@ -96,9 +96,9 @@
       <i class="fa fa-times"></i>
     </div>
 
-</div>
+    <app-info-object [info_object]="infoObject" 
+    (closeWindow)="infoObjectWindow.open = false" 
+    *ngIf="infoObjectWindow.open"
+    (removeFavoriteEvent)="removeFavorite($event)"></app-info-object>
 
-<app-info-object [info_object]="infoObject" 
-                (closeWindow)="infoObjectWindow.open = false" 
-                *ngIf="infoObjectWindow.open"
-                (removeFavoriteEvent)="removeFavorite($event)"></app-info-object>
+</div>
