--- a/src/app/spotbie/profile-header/albums/albums.component.html
+++ b/src/app/spotbie/profile-header/albums/albums.component.html
@@ -1,6 +1,6 @@
 <div class='spotbie-loading-screen' *ngIf="loading">
 
-    <i class="fa fa-spinner fa-spin"></i>
+    <i class="spotbie-loading-gif fa fa-spinner fa-spin"></i>
     <div class='spotbie-loading-percent' *ngIf='show_upload_progress'>{{ upload_progress }}% completed.</div>
     <div class='spotbie-loading-percent' *ngIf='upload_progress > 99 && show_upload_progress'>Upload complete...processing.</div>
 
