--- a/src/app/spotbie/profile-header/profile-header.component.css
+++ b/src/app/spotbie/profile-header/profile-header.component.css
@@ -296,17 +296,20 @@ swiper{
 
 }
 @media (max-width: 560px) { 
-     .spotbie-profile-header-options{
+    .spotbie-profile-header-options{
         width: 98%;
         min-width: 98%;
         max-width: 98%;
         margin-bottom: 25px;
-     }
-     .spotbie-slideshow-button{
+    }
+    .spotbie-slideshow-button{
         padding: 15px;
         padding-top: 5px;
         padding-bottom: 5px;
-     }     
+    }     
+    .spotbie-profile-image {
+        background-size: cover !important;        
+    }     
 }
 @media (max-width: 460px) { 
     .spotbie-profile-header-options{
