--- a/src/app/spotbie/map/info-object/info-object.component.css
+++ b/src/app/spotbie/map/info-object/info-object.component.css
@@ -1,6 +1,9 @@
 .spotbie-overlay-window{
     padding-bottom: 100px;
     z-index: 9999998;
+    background-position: center !important;
+    background-repeat: no-repeat !important;
+    background-size: cover !important;    
 }
 .spotbie-toast-message{
     position: fixed;
@@ -153,6 +156,9 @@
     margin-top: 30px;
     font-size: 16px;
     font-weight: bold;
+}
+.spotbie-album-media-image-wrapper{
+    background-color: rgba(0,0,0,.63);
 }
 @media (max-width: 1583px) { 
 
