--- a/src/app/spotbie/map/info-object/info-object-share/info-object-share.component.css
+++ b/src/app/spotbie/map/info-object/info-object-share/info-object-share.component.css
@@ -66,11 +66,13 @@
     text-overflow: ellipsis;    
 }
 .spotbie-album-media-image-wrapper{
-    position: fixed;
+    position: absolute;
     top: 0;
+    bottom: 0;
     width: 100%;
     max-width: 100%;
     max-height: 100%;
+    min-height: 100%;
     height: 100%;
     background-position: center !important;
     background-repeat: no-repeat !important;
