--- a/src/app/spotbie/map/info-object/info-object-share/info-object-share.component.css
+++ b/src/app/spotbie/map/info-object/info-object-share/info-object-share.component.css
@@ -89,15 +89,36 @@
     max-height: 550px;
     height: 550px;
 }
+.spotbie-album-media-image-wrapper{
+    position: fixed;
+    margin: 0 auto;
+    min-width: 100%;
+    width: 100%;
+    max-width: 100%;
+    min-height: 100%; 
+    background-position: center !important;
+    background-repeat: no-repeat !important;
+    background-size: cover !important;
+    background-attachment: fixed !important;
+    text-align: center;
+}
+.spotbie-overlay-window{
+    padding-top: 0px;
+    padding-bottom: 140px;
+}
 .spotbie-album-media-image-blur{
     position: absolute;
     left: 0;
     right: 0;
+    top: 0;
+    bottom: 0;
     width: 100%;
     max-width: 100%;
+    min-height: 100%;
     max-height: 100%;
     height: 100%;
-    background-color: rgba(0,0,0,.7);
+    background-color: rgba(0,0,0,.88);
+    z-index: -1;
 }
 .spotbie-info-object-image{
     position: relative;
